📝 (TestController.cc): Add comments to clarify the purpose of creating JSON response and response object 📝 (TestController.h): Add a comment to explain the addition of a route to the root path 🔧 (docker-compose-test.yml): Add a docker-compose file for testing environment setup 🔧 (CMakeLists.txt): Refactor to include headers in the test project 📝 (test_main.cc): Add a function to calculate the sum of numbers and test cases for the sum function

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,12 +4,9 @@ project(DrogonApp_test CXX)
 file(GLOB TEST_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
 add_executable(${PROJECT_NAME} ${TEST_SRC_FILES})
 
-# ##############################################################################
-# If you include the drogon source code locally in your project, use this method
-# to add drogon
-# target_link_libraries(${PROJECT_NAME} PRIVATE drogon)
-#
-# and comment out the following lines
+file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
+add_custom_target(${PROJECT_NAME}_headers SOURCES ${HEADERS})
+
 target_link_libraries(${PROJECT_NAME} PRIVATE Drogon::Drogon)
 
 ParseAndAddDrogonTests(${PROJECT_NAME})
